refactored the entire grid and re-styled the titles

--- a/index.html
+++ b/index.html
@@ -20,34 +20,39 @@
         </form>
     </header>
     <main>
-            <h2 class="row1 column1">KNOWLEDGE</h2>
-            <a href="https://docs.yapily.com/api" class="row2 column1"><button>API REFERENCE</button></a>
-            <a href="https://yapily.atlassian.net/wiki/spaces/TS/overview" class="row3 column1"><button>TCS CONFLUENCE</button></a>
-            <a href="https://docs.yapily.com/" class="row4 column1"><button>DOCS</button></a>
-
-            <h2 class="row1 column2">PLATFORMS</h2>
-            <a href="https://hub.yapily.com/" class="row2 column2"><button>HUB</button></a>
-            <a href="https://dashboard.yapily.com/" class="row3 column2"><button>DASHBOARD</button></a>
-            <a href="https://admin.yapily.com/" class="row4 column2"><button>ADMIN v1</button></a>
-            <a href="https://admin-beta.yapily.com/" class="row5 column2"><button>ADMIN v2</button></a>
-            <a href="https://yapily.atlassian.net/secure/Dashboard.jspa?selectPageId=10000" class="row6 column2"><button>JIRA</button></a>
-            <a href="https://bitbucket.org/yapily/docs.yapily.com/src/master/" class="row7 column2"><button>BITBUCKET</button></a>
-            <a href="https://app.asana.com/0/1200684557523414/1201144869466992" class="row8 column2"><button>ASANA</button></a>
-            <a href="https://console.cloud.google.com/logs/query?project=yapily-production" class="row9 column2"><button>GCP</button></a>
-
-            <h2 class="row1 column3">RESOURCES</h2>
-            <a href="https://app.drift.com/conversations/3295601957" class="row2 column3"><button>DRIFT CHAT</button></a>
-            <a href="https://acaciaconnect.atlassian.net/wiki/spaces/PRODUCT/pages/1080754193/Jargon+Buster+Glossary" class="row3 column3"><button>JARGON BUSTER</button></a>
-            <a href="https://www.yapily.com/coverage/" class="row4 column3"><button>COVERAGE</button></a>
-            <a href="https://bitbucket.org/yapily/yapily-openapi3-specification/src/master/specs/openapi.json" class="row5 column3"><button>YAPILY SPEC</button></a>
-            <a href="https://openbankinguk.github.io/read-write-api-site3/v3.1.8/profiles/" class="row6 column3"><button>OBIE SPEC</button></a>
-
-            <h2 class="row1 column4">HR</h2>
-            <a href="https://yapily.bamboohr.com/home/#" class="row2 column4"><button>BAMBOO</button></a>
-            <a href="https://go.xero.com/app/!nn9KC/expenses/" class="row3 column4"><button>XERO</button></a>
-            <a href="https://yapily.robolabs.lt/web?#" class="row4 column4"><button>ROBOLABS</button></a>
-            <a href="https://yapily.workable.com/backend" class="row5 column4"><button>WORKABLE BACKEND</button></a>
-        </div>
+        <section class="column knowledge">
+            <h2>KNOWLEDGE</h2>
+            <a href="https://docs.yapily.com/"><button>DOCS</button></a>
+            <a href="https://docs.yapily.com/api"><button>API REFERENCE</button></a>
+            <a href="https://yapily.atlassian.net/wiki/spaces/TS/overview"><button>TCS CONFLUENCE</button></a>
+        </section>
+        <section class="column platforms">
+            <h2>PLATFORMS</h2>
+            <a href="https://dashboard.yapily.com/"><button>DASHBOARD v1</button></a>
+            <a href="https://dashboard-beta.yapily.com/"><button>DASHBOARD v2</button></a>
+            <a href="https://admin.yapily.com/"><button>ADMIN v1</button></a>
+            <a href="https://admin-beta.yapily.com/"><button>ADMIN v2</button></a>
+            <a href="https://yapily.atlassian.net/secure/Dashboard.jspa?selectPageId=10000"><button>JIRA</button></a>
+            <a href="https://bitbucket.org/yapily/docs.yapily.com/src/master/"><button>BITBUCKET</button></a>
+            <a href="https://app.asana.com/0/1200684557523414/1201144869466992"><button>ASANA</button></a>
+            <a href="https://console.cloud.google.com/logs/query?project=yapily-production"><button>GCP</button></a>
+        </section>
+        <section class="column resources">
+            <h2>RESOURCES</h2>
+            <a href="https://hub.yapily.com/"><button>HUB</button></a>
+            <a href="https://app.drift.com/conversations/3295601957"><button>DRIFT CHAT</button></a>
+            <a href="https://acaciaconnect.atlassian.net/wiki/spaces/PRODUCT/pages/1080754193/Jargon+Buster+Glossary"><button>JARGON BUSTER</button></a>
+            <a href="https://www.yapily.com/coverage/"><button>COVERAGE</button></a>
+            <a href="https://bitbucket.org/yapily/yapily-openapi3-specification/src/master/specs/openapi.json"><button>YAPILY SPEC</button></a>
+            <a href="https://openbankinguk.github.io/read-write-api-site3/v3.1.8/profiles/"><button>OBIE SPEC</button></a>
+        </section>
+        <section class="column hr">
+            <h2>HR</h2>
+            <a href="https://yapily.bamboohr.com/home/#"><button>BAMBOO</button></a>
+            <a href="https://go.xero.com/app/!nn9KC/expenses/"><button>XERO</button></a>
+            <a href="https://yapily.robolabs.lt/web?#"><button>ROBOLABS</button></a>
+            <a href="https://yapily.workable.com/backend"><button>WORKABLE BACKEND</button></a>
+        </section>
     </main>
 </body>
 </html>
